--- a/wandao.tt
+++ b/wandao.tt
@@ -255,3 +255,4 @@
 /ac {你手中的圆月弯刀一震，不知怎么就落在了地下}{}
 /ac {^你向%1开始移动。（40->35)}{}
 /ac {^你向%1开始移动。（35->30)}{qx;wiblade}
+/ac {^你向%1开始移动。（30->25)}{qx;wiblade}
