--- a/claw.tt
+++ b/claw.tt
@@ -42,6 +42,7 @@
 /al noblade2 {/var blade2  0;/showme no blade2;}
 /ac {^你抽出一把明晃晃的圆月弯刀}{iblade}
 /ac {^你装备神之祝福宝剑作武器}{isword}
+/ac {^你「唰」地一声抽出一把备用剑}{isword}
 /ac {^你放下手中的神之祝福宝剑}{nosword}
 /ac {^你装备%0棋子作武器}{ianqi}
 /ac {^你将仙人刺握在手中}{ianqi}
@@ -63,6 +64,7 @@
 /ac {^    ＊百鬼夜狂＊(blade2)}{noblade2}
 /ac {^  √神之祝福宝剑(zhufu sword)}{isword}
 /ac {^    神之祝福宝剑(zhufu sword)}{nosword}
+/ac {^  √备用剑(sword)}{isword;/delay {0.2}{isword}}
 /al wifushou {/if {$hasfushou==0}{wi jade}}
 /al wihand {/if {$hashand==0}{unwi all}}
 /al wiblade {wifushou;/if {$hasblade==0}{unwi piece;unwi needle;wi jade2}}
@@ -98,8 +100,8 @@
                     }
         }
 /al j {exert mihunshu}
-/al jj {perform yanduhantan;/showme @@@@ sword busy}
 /al jjj {perform dodge.lianhuanbu}
+/al jjj {perform yanduhantan;/showme @@@@ sword busy}
 /al kk {wi sword;perform shuanglengcanxia  &&&& steps busy}
 /al k {kk}
 /ac {^你对著%0！今日不是你死就是我活！} {de2 iskill;}
@@ -113,9 +115,9 @@
             }
 /nop 『棋盘切』（gobankiri）
 /nop 『百鬼夜狂』（hyakki）
-/nop bg {reffs;do enable blade ittouryu,set secon_perform hyakki}
 /al bg {set secon_perform hyakki;wib2;/showme ====== 刀  bg}
-/al qie {set secon_perform gobankiri;wib2}
+/al qie {set secon_perform gobankiri;wib2;/showme ########### 刀 qie######}
+/al jj {do unwield sword,wield blade,perform gobankiri;slcx}
 /nop 『碧映光寒』(biyingguanghan)
 /al bygh {wisword;perform sword.biyingguanghan}
 /nop 『霜冷残霞』(shuanglengcanxia)
@@ -123,16 +125,18 @@
 /nop 『雁渡寒潭』〔yanduhantan〕
 /nop 『意染苍云』（yirancangyun）
 /al slcx {set secon_perform shuanglengcanxia;wis2;/showme ====== 剑  slcx}
-/al yrcy {set secon_perform yirancangyun;wis2}
+/al yrcy {set secon_perform yirancangyun;wis2;/showme ====== 剑  *yrcy}
 /al po   {do unwield all,perform unarmed.polu,wield zhufu sword;slcx}
 /al tp {perform dodge.feiyanshi}
 /nop 技能检查
 /var yrcyok 1
 /var bgok 0
+/var qieok 1
+/var qieok_t 0
 /var bgok_t 0
 /var qpok 0
 /nop todo---
-/al okyrcy {/var yrcyok 0}
+/al okyrcy {/var yrcyok 1}
 /nop 百鬼busy效果
 /var npcbusy 0
 /ac {^突然，一蓬鲜血激射}{
@@ -146,23 +150,45 @@
     /showme =========== slcx ==============;
     /delay {2.1} {
                     /if {$shaqi>0}{bg}{
-                                    /if {$bgok_t==1}{bg}{slcx};
+                                    /if {$bgok_t==1}{bg}{
+                                                    /if {$yrcyok==1}{yrcy}{slcx};
+                                                        };
                                     };
                  };
     }
 /ac {^你突然仰天长嚎}{
     iskill;
+    cks;
     /showme =========== bg ==============;
-    slcx;
+    /if {$qieok==1 || $qieok_t ==1}{qie};
     /var bgok 0;
     /var bgok_t 0;
     /delay {122}{/var bgok_t 1};
-    /delay {2.1} {
-                  cks;
+    /delay {2.5} {
+                    /if {$shaqi>0}{bg}{
+                                    /if {$bgok_t==1}{bg}{
+                                                    /if {$yrcyok==1}{yrcy}{slcx};
+                                                        };
+                                    };
                   /showme {------shaqi=$shaqi};
                  };
+}{4}
+/ac {^自右上方直向}{
+    iskill;
+    /showme =========== qie ==============;
+    /var qieok 0;
+    /delay {60}{/var qieok_t 1};
+    /if {$yrcyok==1}{yrcy}{slcx};
+                    }
+/nop yrcy 
+/ac {^你脸上神色惨然，猛一咬牙}{
+    /var yrcyok 0;
+    /delay {181}{/var yrcyok 1};
+    slcx;
 }
-/al stopk {nokill;/unticker {kill}}
+/var qienpc 0
+/ac {^面对你雷霆一般的一击}{/var qienpc 1}
+/al stopk {/var qieok 1;nokill;/unticker {kill}}
 /ac {^你的法力太低}{hp}
 /ac {^( 你头重脚轻，正在勉力支撑著不倒下去)}{exert huaxue}
 /ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{wh;tp}
@@ -230,7 +256,7 @@
 /ac {^破霄的锋刃慢慢恢复了正常的光泽}{posion jade shecao}
 /ac {^需等待%0秒才能再次使用迷魂术}{/showme ----todo ----;}
 /ac {^你手中＊赤炼＊剑气回转}{/showme *******************secon sword pfm******}
-/ac {^疗伤时至少需要有最大内力值护体}{sleep sleepbag}
+/ac {^疗伤时至少需要有最大内力值护体}{hn;sleep sleepbag}
 /al yangcw {withdraw 50000;de2 {withdraw 50000};
     de4 {yang pig $MAG$ 小小爪 $petname};
     de7 whistle;
@@ -240,4 +266,4 @@
 /ac {^你不可以在这里用内功}{wlk}
 /ac {^你的伤势好了一些}{de1 {exert jingxin}}
 /ac {^你必须至少空出一只手来}{i}
-/ac {^使出一式『一切随缘』，剑身似灵蛇般缠住你手中的兵刃，神之祝福宝剑脱手而飞}{qt zhufu sword;nosword;de2 {wi zhufu sword}}
+/ac {^使出一式『一切随缘』，剑身似灵蛇般缠住你手中的兵刃，神之祝福宝剑脱手而飞}{qt zhufu sword;nosword;de2 {wi sword}}
