--- a/claw.tt
+++ b/claw.tt
@@ -15,10 +15,16 @@
 /ac {^【新手} {/line {log} ../newclaw.log}
 /ac {^【传闻} {/line {log} ../newclaw.log}
 /al reload {/read claw.tt}
-/var haspet 0
 /var petname xxz
+/read comm/gag.sc
+/read comm/path.sc
+/read comm/normal.sc
+/read comm/quest.sc
+/read comm/status.sc
+/read comm/pet.sc
+/read comm/autorecover_hc.sc
+/var haspet 0
 /al wpet {order wield blade}
-/read pet.sc
 /var hasblade 0
 /var hasanqi 0
 /var hashand 0
@@ -124,6 +130,7 @@
 /var qpok 0
 /var mhok 1
 /var mhok_t 0
+/var qienpc 0
 /nop todo---
 /al okyrcy {/var yrcyok 1}
 /nop 百鬼busy效果
@@ -131,9 +138,10 @@
 /ac {^突然，一蓬鲜血激射}{
     /var npcbusy 6
 }
+/ac {^面对你雷霆一般的一击}{/var qienpc 1}
 /ac {^你停住了手，用飘飘的眼光}{/var mhok 0;/delay {14.2}{/var mhok_t 1}}
 /nop polu todo
-/ac {^在森森剑影间玫瑰色的薄雾冉冉升起}{po;/showme ------ polu &&&----}
+/ac {^在森森剑影间玫瑰色的薄雾冉冉升起}{po;/showme ------ & & & & & & polu  & & & & & &  -----}
 /al ki {wield zhufu sword;
         hp;
         reffs;
@@ -151,25 +159,24 @@
 /ac {^你手中＊赤炼＊贴身斜指向上}{
     iskill;
     /showme =========== slcx ==============;
+    /if {$qieok==1 || $qieok_t ==1 && $qienpc==0}{qie}{/if {$yrcyok==1}{yrcy}{;};};
     /delay {2.1} {
-                    /if {$shaqi>0}{bg}{
-                                    /if {$bgok_t==1}{bg}{
+                    /if {$shaqi>0 || $bgok_t==1}{bg}{
                                                     /if {$yrcyok==1}{yrcy}{slcx};
-                                                        };
-                                    };
+                                                    };
                  };
     }
 /ac {^你突然仰天长嚎}{
     iskill;
     cks;
     /showme =========== bg ==============;
-    /if {$qieok==1 || $qieok_t ==1}{qie};
+    /if {$qieok==1 || $qieok_t ==1 && $qienpc==0}{qie}{/if {$yrcyok==1}{yrcy}{slcx};};
     /var bgok 0;
     /var bgok_t 0;
     /delay {122}{/var bgok_t 1};
     /delay {2.5} {
                     /if {$shaqi>0 || $bgok_t==1}{bg}{
-                        /if {$qieok==1 || $qieok_t ==1}{qie}{
+                        /if {$qieok==1 || $qieok_t ==1 && $qienpc==0}{qie}{
                              /if {$yrcyok==1}{yrcy}{slcx}; }
                                     };
                   /showme {------shaqi=$shaqi};
@@ -179,39 +186,39 @@
     hp;
     iskill;
     /showme =========== qie ==============;
+    /if {$yrcyok==1}{yrcy}{slcx};
     /var qieok 0;
-    /delay {60}{/var qieok_t 1};
-            /if {$shaqi>0}{bg}{
-             /if {$bgok_t==1}{bg}{ 
-                /if {$yrcyok==1}{yrcy}{slcx}; };
+    /delay {60.2}{/var qieok_t 1};
+    /if {$shaqi>0 || $bgok_t==1}{bg}{
+        /if {$yrcyok==1}{yrcy}{slcx}; 
                         }; 
                      }
 /ac {^设定环境变数：secon_perform = "hyakki"}{
-    /delay {8.1} {
+    /delay {9.1} {
         /if {$is_kill ==1}{
-            /if {$shaqi>0}{bg}{
-             /if {$bgok_t==1}{bg}{ 
-                /if {$yrcyok==1}{yrcy}{slcx}; };
-                        }; 
-                     }
-                     }
+            /if {$shaqi>0 || $bgok_t==1}{bg}{
+                    /if {$yrcyok==1}{yrcy}{slcx}; 
+                                            }; 
+                         }
+                 }
 }
-/unac  {^设定环境变数：secon_perform = "hyakki"}
+/nop   {^设定环境变数：secon_perform = "hyakki"}
 /nop yrcy 
 /ac {^你脸上神色惨然，猛一咬牙}{
     /var yrcyok 0;
+    de1 cks;
     /delay {181}{/var yrcyok 1};
-    slcx;
+    /if {$qieok==1 || $qieok_t ==1 && $qienpc==0}{qie}{
+            /if {$shaqi>0 || $bgok_t==1}{bg}{slcx};
+                                    };
 }
-/var qienpc 0
-/ac {^面对你雷霆一般的一击}{/var qienpc 1}
 /al stopk {
         nokill;/unticker {kill};
         /var qieok 1;
         /var qieok_t 0;
-        /var bgok_t 0;
+        /nop var bgok_t 0;
         /var mhok 1;
-        /var mhok_t 0;
+        /var qienpc 0;
         }
 /ac {^你的法力太低}{hp}
 /ac {^( 你似乎十分疲惫}{/showme ----todo 危险-----}
@@ -226,16 +233,11 @@
 /ac {^『破颅』只能对战}{sk}
 /ac {^『飞雁式』只能在战斗}{sk}
 /ac {^你不在战斗中，不需要假死}{sk}
-/read gag.sc
-/read path.sc
-/read normal.sc
-/read quest.sc
-/read status.sc
 /al hxdazuo {exercise 300;hh;/delay {2.1}{dazuo}}
-/al hx {exert jingxin;use baiyao}
+/al hx {do exert jingxin,use baiyao}
 /al hs {drink dai}
-/ac {^你的真气不够。}{/if {$is_kill==0 && $is_walk==0}{exercise 500;hn}}
-/ac {^然而，%1已经死了}{hp}
+/ac {^你的真气不够。}{/if {$is_kill==0 && $is_walk==0}{hn}}
+/ac {^然而，%1已经死了}{/if {$is_kill==1}{cks};}
 /al getitem {
     pick needle;
     get 1200 needle from cactus bonsai;
@@ -248,7 +250,6 @@
      remove all;
      wear all
 }
-/read autorecover_hc.sc
 /al qq {quest}
 /al ffy {recall back;do w,n,e,e,e,n,u}
 /ac {^任务被你完}{wk}
@@ -263,8 +264,6 @@
             iskill
                          }
 /al wim {wi zhufu sword;wi sword2}
-/ac {^你还需等待%1秒钟才能再次施出『无空漩流』}{ho}
-/ac {^你还需等待%1秒钟才能再次施出『红藕香残』}{fl}
 /al fy2room {wlk;do d,s,w,u,e,u,u,u,u,u,u,u,u,u;roomin;nwlk}
 /al room2fy {pl {wlk;out;d;d;d;d;d;d;d;d;d;w;d;e;n;u;nwlk};pr}
 /al roomin {928}
@@ -278,10 +277,8 @@
 }
 /al fy2zt {fy2ztv}
 /al hj {use hugu}
-/ac {^粉黛的锋刃慢慢恢复了正常的光泽}{posion axe shecao}
-/ac {^破霄的锋刃慢慢恢复了正常的光泽}{posion jade shecao}
 /ac {^需等待%0秒才能再次使用迷魂术}{/showme ----todo ----;}
-/ac {^你手中＊赤炼＊剑气回转}{/showme *******************secon sword pfm******}
+/ac {^你手中＊赤炼＊剑气回转}{/showme *******************       secon sword pfm   ******}
 /ac {^疗伤时至少需要有最大内力值护体}{hn;sleep sleepbag}
 /al yangcw {withdraw 50000;de2 {withdraw 50000};
     de4 {yang pig $MAG$ 小小爪 $petname};
